--- a/contact.html
+++ b/contact.html
@@ -1,15 +1,13 @@
 ---
 layout: page
 title: Contact
+permalink: /contact/
 ---
 
+<p>
+My email address is <a href="mailto:{{ site.author.email }}">{{ site.author.email }}</a>.
+</p>
 
-<form action="//formspree.io/{{ site.author.email }}"
-      method="POST">
-    <input type="email" name="_replyto" placeholder="{{ site.var_your_email }}">
-    <input type="hidden" name="_next" value="{{ site.baseurl }}/thanks" />
-    <input type="hidden" name="_subject" value="New submission from {{ site.url }}{{ site.baseurl }}" />
-    <input type="text" name="_gotcha" style="display:none" />
-    <textarea type="text" name="content" rows="8" placeholder="{{ site.var_your_message }}"></textarea>
-    <input type="submit" value="Send">
-</form>
+<p>
+I'm also on <a href="{{ site.linkedin }}">LinkedIn</a>.
+</p>
