--- a/index.html
+++ b/index.html
@@ -41,3 +41,5 @@ home: true
 {% if paginator.previous_page or paginator.next_page %}
   {% include pagination.html %}
 {% endif %}
+
+<p class="rss-subscribe">subscribe <a href="/feed.xml">via RSS</a></p>
