Clean up site-content page and disallow for indexing

--- a/impressum.html
+++ b/impressum.html
@@ -4,7 +4,7 @@ title: Site Contact / Impressum
 ---
 
 <p>
-Responsible for site content / Verantwortlich für den Inhalt dieser Website.
+Responsible for site content. / Verantwortlich für den Inhalt dieser Website.
 </p>
 
 <dl>
@@ -20,6 +20,5 @@ Responsible for site content / Verantwortlich für den Inhalt dieser Website.
 
 <p>
 Zur kurzfristigen Kontaktaufnahme benutzen Sie bitte die angegebene
-E-Mail-Addresse oder das Kontaktformular unter
-<a href="{{ site.baseurl }}/contact">Contact</a>.
+E-Mail-Addresse.
 </p>
