Added Twitter to contact page

--- a/contact.html
+++ b/contact.html
@@ -9,5 +9,5 @@ My email address is <a href="mailto:{{ site.author.email }}">{{ site.author.emai
 </p>
 
 <p>
-I'm also on <a href="{{ site.linkedin }}">LinkedIn</a>.
+I'm also on <a href="{{ site.twitter }}">Twitter</a> and <a href="{{ site.linkedin }}">LinkedIn</a>.
 </p>
