--- a/index.html
+++ b/index.html
@@ -42,4 +42,6 @@ home: true
   {% include pagination.html %}
 {% endif %}
 
-<p class="rss-subscribe">subscribe <a href="/feed.xml">via RSS</a></p>
+<p class="rss-subscribe">subscribe <a href="/feed.xml">via RSS</a>
+<a href="https://twitter.com/transactionblog" class="twitter-follow-button" data-show-count="false">Follow @transactionblog</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+</p>
