Replace external Font Awesome with local copy

--- a/impressum.html
+++ b/impressum.html
@@ -22,3 +22,9 @@ Responsible for site content. / Verantwortlich für den Inhalt dieser Website.
 Zur kurzfristigen Kontaktaufnahme benutzen Sie bitte die angegebene
 E-Mail-Addresse.
 </p>
+
+<h4>About Font Awesome</h4>
+
+<p>
+This website uses <a href="https://fontawesome.com/v4.7.0/">Font Awesome 4.7</a>. Font Awesome is licensed under <a href="http://scripts.sil.org/OFL">SIL OFL 1.1</a>. Font Awesome code is licensed under <a href="http://opensource.org/licenses/mit-license.html">MIT License</a>.
+</p>
