Replace external Google fonts with local copies

--- a/impressum.html
+++ b/impressum.html
@@ -23,8 +23,51 @@ Zur kurzfristigen Kontaktaufnahme benutzen Sie bitte die angegebene
 E-Mail-Addresse.
 </p>
 
+<h4>About Crimson Text</h4>
+
+<p>
+This website uses <a href="https://fonts.google.com/specimen/Crimson+Text">Crimson Text 8</a>. Crimson Text is licensed under <a href="http://scripts.sil.org/OFL">SIL OFL 1.1</a>.<br>
+CrimsonText-Regular.ttf: Copyright (c) 2010, Sebastian Kosch (sebastian@aldusleaf.org), with Reserved Font Name "Crimson".<br>
+CrimsonText-Italic.ttf: Copyright (c) 2010, Sebastian Kosch (sebastian@aldusleaf.org), with Reserved Font Name "Crimson".<br>
+CrimsonText-SemiBold.ttf: Copyright (c) 2010, Sebastian Kosch (sebastian@aldusleaf.org), with Reserved Font Name "Crimson".<br>
+CrimsonText-SemiBoldItalic.ttf: Copyright (c) 2010, Sebastian Kosch (sebastian@aldusleaf.org), with Reserved Font Name "Crimson".<br>
+CrimsonText-Bold.ttf: Copyright (c) 2010, Sebastian Kosch (sebastian@aldusleaf.org), with Reserved Font Name "Crimson".<br>
+CrimsonText-BoldItalic.ttf: Copyright (c) 2010, Sebastian Kosch (sebastian@aldusleaf.org), with Reserved Font Name "Crimson".
+</p>
+
 <h4>About Font Awesome</h4>
 
 <p>
 This website uses <a href="https://fontawesome.com/v4.7.0/">Font Awesome 4.7</a>. Font Awesome is licensed under <a href="http://scripts.sil.org/OFL">SIL OFL 1.1</a>. Font Awesome code is licensed under <a href="http://opensource.org/licenses/mit-license.html">MIT License</a>.
+</p>
+
+<h4>About Source Code Pro</h4>
+
+<p>
+This website uses <a href="https://fonts.google.com/specimen/Source+Code+Pro">Source Code Pro 7</a>. Source Code Pro is licensed under <a href="http://scripts.sil.org/OFL">SIL OFL 1.1</a>.<br>
+SourceCodePro-ExtraLight.ttf: Copyright 2010, 2012 Adobe Systems Incorporated. All Rights Reserved.<br>
+SourceCodePro-Light.ttf: Copyright 2010, 2012 Adobe Systems Incorporated. All Rights Reserved.<br>
+SourceCodePro-Regular.ttf: Copyright 2010, 2012 Adobe Systems Incorporated. All Rights Reserved.<br>
+SourceCodePro-Medium.ttf: Copyright 2010, 2012 Adobe Systems Incorporated. All Rights Reserved.<br>
+SourceCodePro-Semibold.ttf: Copyright 2010, 2012 Adobe Systems Incorporated. All Rights Reserved.<br>
+SourceCodePro-Bold.ttf: Copyright 2010, 2012 Adobe Systems Incorporated. All Rights Reserved.<br>
+SourceCodePro-Black.ttf: Copyright 2010, 2012 Adobe Systems Incorporated. All Rights Reserved.
+</p>
+
+<h4>About Source Sans Pro</h4>
+
+<p>
+This website uses <a href="https://fonts.google.com/specimen/Source+Sans+Pro">Source Sans Pro 11</a>. Source Sans Pro is licensed under <a href="http://scripts.sil.org/OFL">SIL OFL 1.1</a>.<br>
+SourceSansPro-ExtraLight.ttf: Copyright 2010, 2012, 2014 Adobe Systems Incorporated (http://www.adobe.com/), with Reserved Font Name Source.<br>
+SourceSansPro-ExtraLightItalic.ttf: Copyright 2010, 2012, 2014 Adobe Systems Incorporated (http://www.adobe.com/), with Reserved Font Name Source.<br>
+SourceSansPro-Light.ttf: Copyright 2010, 2012, 2014 Adobe Systems Incorporated (http://www.adobe.com/), with Reserved Font Name Source.<br>
+SourceSansPro-LightItalic.ttf: Copyright 2010, 2012, 2014 Adobe Systems Incorporated (http://www.adobe.com/), with Reserved Font Name Source.<br>
+SourceSansPro-Regular.ttf: Copyright 2010, 2012, 2014 Adobe Systems Incorporated (http://www.adobe.com/), with Reserved Font Name Source.<br>
+SourceSansPro-Italic.ttf: Copyright 2010, 2012, 2014 Adobe Systems Incorporated (http://www.adobe.com/), with Reserved Font Name Source.<br>
+SourceSansPro-SemiBold.ttf: Copyright 2010, 2012, 2014 Adobe Systems Incorporated (http://www.adobe.com/), with Reserved Font Name Source.<br>
+SourceSansPro-SemiBoldItalic.ttf: Copyright 2010, 2012, 2014 Adobe Systems Incorporated (http://www.adobe.com/), with Reserved Font Name Source.<br>
+SourceSansPro-Bold.ttf: Copyright 2010, 2012, 2014 Adobe Systems Incorporated (http://www.adobe.com/), with Reserved Font Name Source.<br>
+SourceSansPro-BoldItalic.ttf: Copyright 2010, 2012, 2014 Adobe Systems Incorporated (http://www.adobe.com/), with Reserved Font Name Source.<br>
+SourceSansPro-Black.ttf: Copyright 2010, 2012, 2014 Adobe Systems Incorporated (http://www.adobe.com/), with Reserved Font Name Source.<br>
+SourceSansPro-BlackItalic.ttf: Copyright 2010, 2012, 2014 Adobe Systems Incorporated (http://www.adobe.com/), with Reserved Font Name Source.
 </p>
