Replace external jQuery with local copy

--- a/impressum.html
+++ b/impressum.html
@@ -41,6 +41,12 @@ CrimsonText-BoldItalic.ttf: Copyright (c) 2010, Sebastian Kosch (sebastian@aldus
 This website uses <a href="https://fontawesome.com/v4.7.0/">Font Awesome 4.7</a>. Font Awesome is licensed under <a href="http://scripts.sil.org/OFL">SIL OFL 1.1</a>. Font Awesome code is licensed under <a href="http://opensource.org/licenses/mit-license.html">MIT License</a>.
 </p>
 
+<h4>About jQuery</h4>
+
+<p>
+This website uses <a href="https://jquery.org/">jQuery 2.2.4</a>. jQuery is licensed under <a href="https://jquery.org/license/">MIT License</a>.
+</p>
+
 <h4>About Source Code Pro</h4>
 
 <p>
