Updated contact information with new email

--- a/contact.html
+++ b/contact.html
@@ -5,9 +5,14 @@ permalink: /contact/
 ---
 
 <p>
-My email address is <a href="mailto:{{ site.author.email }}">{{ site.author.email }}</a>.
+My email address is
+<a href="mailto:tdz@users.sourceforge.net">tdz@users.sourceforge.net</a>
+for anything related to Free and Open Source Software, or
+<a href="mailto:{{ site.author.email }}">{{ site.author.email }}</a>
+otherwise.
 </p>
 
 <p>
-I'm also on <a href="{{ site.twitter }}">Twitter</a> and <a href="{{ site.linkedin }}">LinkedIn</a>.
+I'm also on <a href="{{ site.linkedin }}">LinkedIn</a> and (rarely)
+<a href="{{ site.twitter }}">Twitter</a>.
 </p>
