--- a/impressum.html
+++ b/impressum.html
@@ -15,7 +15,7 @@ Responsible for site content. / Verantwortlich für den Inhalt dieser Website.
     <dd>Am Campus 3A, 64807 Dieburg, DEUTSCHLAND/GERMANY</dd>
 
     <dt>E-Mail</dt>
-    <dd>tdz@users.sourceforge.net<dd>
+    <dd>contact@tzimmermann.org<dd>
 </dl>
 
 <p>
